Fixed issue #44 the a:hover text for nav links
was turning red making it invisible in the red background.
base.scss has now a more specific rule for the navbar used
in the seller home page that keeps the text color at 333

--- a/shop/static/scss/base.scss
+++ b/shop/static/scss/base.scss
@@ -174,6 +174,16 @@ nav {
     color: #f66569;
 }
 
+.navbar {
+    .nav-links a.active {
+        color: #333;
+    }
+
+    .nav-links a:hover {
+        color: #333;
+    }
+}
+
 .main_container {
   width: 100%;
   height: 400px;
